--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: ./app
       dockerfile: Dockerfile.prod
-    command: gunicorn -w 4 ecommerce.wsgi:application --bind 0.0.0.0:8000
+    command: gunicorn -w 4 ecommerce.wsgi:application --bind 0.0.0.0:8000 --reload
     volumes:
       - static_volume:/home/app/web/staticfiles
       - ./app:/home/app/web
